# jwt-generator

./: .gitignore  LICENSE-MIT  README.md  pyproject.toml  sample_payload.json
.github/workflows/: test.yml
src/jwt_generator/: main.py
tests/: test_main.py
